[package]
name = "infinitask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
async-trait = "0.1"
async-channel = "2"
futures = { version = "0.3", default-features = false, features = [
    "std",
    "async-await",
] }
thiserror = "1"

tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
async-timer = "*"
futures = { version = "0.3", default-features = false, features = [
    "std",
    "async-await",
    "executor",
] }


[[example]]
path = "./examples/tasks.rs"
name = "tasks"
